<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:weightSum="1">
    <ImageView

        android:layout_width="392dp"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="#00f"
        android:contentDescription="@string/app_name"
        android:layout_weight="0.62" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="username"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"

        android:hint="password"/>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:weightSum="2">
        <Button
            android:id="@+id/cancel_in_dialog"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.66"
            android:background="#00f"
            android:onClick="onHomeButtonClick"
            android:text="cancel" />
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#000" />
        <Button
            android:id="@+id/register_in_dialog"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.66"
            android:background="#00f"
            android:onClick="onHomeButtonClick"
            android:text="@string/register" />
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#000" />
        <Button
            android:id="@+id/login_in_dialog"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.68"
            android:background="#f55"
            android:onClick="onHomeButtonClick"
            android:text="@string/login" />
    </LinearLayout>

</LinearLayout>